# ebim_hackthon

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  Dockerfile  LICENSE  NOTICE  README.md  STATUS.md  build_and_run.sh  pyproject.toml  requirements-task3-optimizer.txt  setup_vm.sh  vm_startup.sh
.github/: CODEOWNERS  LICENSE_HEADER.txt  PULL_REQUEST_TEMPLATE.md
assets/: A_edit.usd  B_edit.usd  C_edit.usd  D_edit.usd  E_edit.usd  F_edit.usd  G_edit.usd  H_edit.usd  I_edit.usd  assets.blend  bowl.usd  bowl2.usd  complete_scene_11_tables.usd  cup.usd  particle_sim_test.usd  plain_white_room.usd  plain_white_room_12_24_3.usd  plain_white_room_20_30_3.usd  plain_white_room_20_30_3_partition.usd  plate.usd  plate2.usd  robot_room.usd  saved_table_cutlery_scene.usd  simple_tray.usd  simple_warehouse.usd  sink_boundary.usdc  spoon.usd  spoon2.usd  table_edit.usd  tabletop_task_scene.usd  tabletop_task_scene_DEMO.usd
docker/: .env.base  Dockerfile.runtime  docker-compose.yaml  ebim-python  task3_entrypoint.sh
docs/: AGENT_STATE.md  CODEX_HANDOFF_2026-07-18.md  DATA_INVENTORY_huggingface.md  EXECUTION_HANDOFF_LIVE.md  HANDOFF_2026-07-23_Stage2.md  HANDOFF_2026-07-23_Stage2_v2.md  HANDOFF_2026-07-24_FULL_PLAN_Claude_to_OpenCode.md  HANDOFF_2026-07-24_SESSION_COMPLETE_LOG.md  HANDOFF_2026-07-24_Stage2_grasp_v3.md  HANDOFF_2026-07-24_Stage2_navdining_fix.md  LEARNING_GUIDE.md  PROJECT_FINAL_STATE_2026-07-22.md  PROJECT_JOURNAL.md  SONNET_EXECUTION_PROMPT_task3.md  TASK3_MASTER_EXECUTION_PLAN_2026-07-24.md  TASK3_STAGE4_LIGHTNING_AGENT_HANDOFF.md  TODO.md  developer_setup.md  eval_results.md  gpu_budget_log.md  participant_readme.md  simdev_setup.md  task3_autonomy_architecture.md  task3_day3_tray_plan_2026-07-18.md  (+9 more)
task1_mujoco/teleop_ros2/keyboard_teleop_publisher/: package.xml  setup.cfg  setup.py
task1_mujoco/teleop_ros2/keyboard_teleop_publisher/keyboard_teleop_publisher/: keyboard_teleop_publisher.py
task1_mujoco/teleop_ros2/vr_teleop_publisher/: package.xml  setup.cfg  setup.py
task1_mujoco/teleop_ros2/vr_teleop_publisher/vr_teleop_publisher/: vr_teleop_publisher.py
(+332 files in other folders)
