<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>keyboard_teleop_publisher</name>
  <version>0.1.0</version>
  <description>
    Full arm+base keyboard teleop publisher for the EBiM task-1 MuJoCo
    simulator (arrow-key cluster, screen-relative base driving). Distinct
    from keyboard_state_publisher (the W/A/S/D/Q/E base-only keyboard of
    the GELLO workflow).
  </description>
  <maintainer email="cahgzt@gmail.com">2houyuhang</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
